packages/typ/tests/fixtures/diagnostics/0822_polyvar_call_wrong_tag_07.ml
let read_eta : [ `A | `B ] -> int = function
  | `A -> 6
  | `B -> 7

let _ = read_eta `C
